{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 59,
  "lineage": "28c2ec76-4b52-f2fd-7b25-24dc9acf968c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846229150353:loadbalancer/app/app-alb/0bb54f240072e43c",
            "arn_suffix": "app/app-alb/0bb54f240072e43c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-452109438.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:846229150353:loadbalancer/app/app-alb/0bb54f240072e43c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a9e14284179ed0da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03783a2d9941e8593"
              },
              {
                "subnet_id": "subnet-07047df7ad15b538f"
              }
            ],
            "subnets": [
              "subnet-03783a2d9941e8593",
              "subnet-07047df7ad15b538f"
            ],
            "tags": {
              "name": "AppLoadBalancer"
            },
            "tags_all": {
              "name": "AppLoadBalancer"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_security_group.ec2_sg",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846229150353:listener/app/app-alb/0bb54f240072e43c/4d5c7a20d25d9606",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:846229150353:targetgroup/app-target-group/476c410f69bf8b5e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846229150353:listener/app/app-alb/0bb54f240072e43c/4d5c7a20d25d9606",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:846229150353:loadbalancer/app/app-alb/0bb54f240072e43c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_alb.app_alb",
            "module.compute.aws_alb_target_group.target_group",
            "module.compute.aws_security_group.ec2_sg",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:846229150353:targetgroup/app-target-group/476c410f69bf8b5e",
            "arn_suffix": "targetgroup/app-target-group/476c410f69bf8b5e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:846229150353:targetgroup/app-target-group/476c410f69bf8b5e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:846229150353:loadbalancer/app/app-alb/0bb54f240072e43c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:security-group/sg-0a9e14284179ed0da",
            "description": "Allow HTTP traffic for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9e14284179ed0da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.150.144.159/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "846229150353",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00540437644d50ff8",
            "arn": "arn:aws:ec2:us-east-1:846229150353:elastic-ip/eipalloc-00540437644d50ff8",
            "association_id": "eipassoc-0138bf3e9c6cda2ea",
            "domain": "vpc",
            "id": "eipalloc-00540437644d50ff8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-031cb8396a5eb04f0",
            "private_dns": "ip-10-0-1-178.ec2.internal",
            "private_ip": "10.0.1.178",
            "public_dns": "ec2-52-201-50-254.compute-1.amazonaws.com",
            "public_ip": "52.201.50.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:internet-gateway/igw-0622f54dec7f1a658",
            "id": "igw-0622f54dec7f1a658",
            "owner_id": "846229150353",
            "tags": {
              "name": "internet_gateway"
            },
            "tags_all": {
              "name": "internet_gateway"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00540437644d50ff8",
            "association_id": "eipassoc-0138bf3e9c6cda2ea",
            "connectivity_type": "public",
            "id": "nat-0d1737ed58a601024",
            "network_interface_id": "eni-031cb8396a5eb04f0",
            "private_ip": "10.0.1.178",
            "public_ip": "52.201.50.254",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07047df7ad15b538f",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c75d973e773603281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d1737ed58a601024",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c75d973e77360328",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0622f54dec7f1a658",
            "id": "r-rtb-0eb4dfde7e7c2b8001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb4dfde7e7c2b800",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:route-table/rtb-0c75d973e77360328",
            "id": "rtb-0c75d973e77360328",
            "owner_id": "846229150353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1737ed58a601024",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:route-table/rtb-0eb4dfde7e7c2b800",
            "id": "rtb-0eb4dfde7e7c2b800",
            "owner_id": "846229150353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0622f54dec7f1a658",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4f5f17bd696ac20",
            "route_table_id": "rtb-0c75d973e77360328",
            "subnet_id": "subnet-0797a0dd611d3dc38"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0270f1788b3c56cf6",
            "route_table_id": "rtb-0c75d973e77360328",
            "subnet_id": "subnet-03b962279180a662e"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88101d05cc520f6",
            "route_table_id": "rtb-0eb4dfde7e7c2b800",
            "subnet_id": "subnet-07047df7ad15b538f"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6dd0e32a3591a7",
            "route_table_id": "rtb-0eb4dfde7e7c2b800",
            "subnet_id": "subnet-03783a2d9941e8593"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:security-group/sg-077e3f11c12bafa2f",
            "description": "allow inbound HTTP and SSH Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e3f11c12bafa2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "846229150353",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:subnet/subnet-0797a0dd611d3dc38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0797a0dd611d3dc38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846229150353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet_1"
            },
            "tags_all": {
              "name": "private_subnet_1"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:subnet/subnet-03b962279180a662e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b962279180a662e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846229150353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet_2"
            },
            "tags_all": {
              "name": "private_subnet_2"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:subnet/subnet-07047df7ad15b538f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07047df7ad15b538f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846229150353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet_1"
            },
            "tags_all": {
              "name": "public_subnet_1"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:subnet/subnet-03783a2d9941e8593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03783a2d9941e8593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846229150353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet_2"
            },
            "tags_all": {
              "name": "public_subnet_2"
            },
            "vpc_id": "vpc-0030abe6ad8c04f56"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846229150353:vpc/vpc-0030abe6ad8c04f56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5650a76c5d31fca",
            "default_route_table_id": "rtb-08133a005b4732474",
            "default_security_group_id": "sg-00516527dc5bcd113",
            "dhcp_options_id": "dopt-045b062bb0b92b9bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0030abe6ad8c04f56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08133a005b4732474",
            "owner_id": "846229150353",
            "tags": {
              "name": "main_vpc"
            },
            "tags_all": {
              "name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}